feat: add styling to hero and navigation

--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Landing Page</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,200;0,400;0,800;1,200&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
 
-    <header>
-        <div class="logo">ROICommerce</div>
-        <nav>
+    <header class="navigation">
+
+        <div class="logo">ROI/Commerce</div>
+        <nav class="nav-space">
             <ul>
                 <li><a href="">Pricing</a></li>
                 <li><a href="">Services</a></li>
@@ -32,8 +37,9 @@
                     sapiente placeat odio...</p>
                 <button>Sign up</button>
             </div>
-            <figure>
-                <img src="" alt="">
+            <figure class="hero-img">
+                <img src="https://images.unsplash.com/photo-1634973357973-f2ed2657db3c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1932&q=80"
+                    alt="">
             </figure>
         </section>
         <section class="advantages">
