fix: make hero image work better

--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
             <div class="cta-signup">
                 <header>
                     <h2>
-                        Hero title
+                        It's time...
                     </h2>
                 </header>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor unde inventore nam, architecto
-                    sapiente placeat odio...</p>
+                <p>...to create your ecommerce store that sells like crazy! 🚀 </p>
                 <button>Sign up</button>
             </div>
             <figure class="hero-img">
