feat: finish landing page project

--- a/index.html
+++ b/index.html
@@ -43,24 +43,26 @@
         </section>
         <section class="advantages">
             <header>
-                <h2>Random section information</h2>
+                <h2>Reasons why you should create your eshop</h2>
             </header>
             <div class="advantages-img">
-                <figure>
-                    <img src="" alt="">
-                    <figcaption>advantage description image 1</figcaption>
+                <figure class="advantages-fig">
+                    <img src="https://cdn.pixabay.com/photo/2020/08/03/10/00/credit-card-5459711_960_720.png"
+                        alt="payment">
+                    <figcaption>easy payment options</figcaption>
                 </figure>
-                <figure>
-                    <img src="" alt="">
-                    <figcaption>advantage description image 2</figcaption>
+                <figure class="advantages-fig">
+                    <img src="https://cdn.pixabay.com/photo/2019/06/19/07/13/email-4284157_1280.png" alt="analytics">
+                    <figcaption>detailed analytics</figcaption>
                 </figure>
-                <figure>
-                    <img src="" alt="">
-                    <figcaption>advantage description image 3</figcaption>
+                <figure class="advantages-fig">
+                    <img src="https://cdn.pixabay.com/photo/2019/10/10/08/11/shopping-4538982_1280.jpg"
+                        alt="mobile first">
+                    <figcaption>mobile first platform</figcaption>
                 </figure>
-                <figure>
-                    <img src="" alt="">
-                    <figcaption>advantage description image 4</figcaption>
+                <figure class="advantages-fig">
+                    <img src="https://cdn.pixabay.com/photo/2023/01/03/05/03/marketing-7693611_1280.png" alt="reach">
+                    <figcaption>grow your reach</figcaption>
                 </figure>
             </div>
         </section>
@@ -78,8 +80,7 @@
                     <header>
                         <h2>LAST Call to action! </h2>
                     </header>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor unde inventore nam, architecto
-                        sapiente placeat odio...</p>
+                    <p>Try our solution. Do not hesitate to call us. We will help to set up your new store.</p>
                 </div>
                 <div class="form-right">
                     <button>Sign up</button>
@@ -88,10 +89,10 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="copyrights">
         <div class="copy-rights">
             <p>Copyrights &copy; The Odin Project 2023</p>
-            <p>Images Copyrights: </p>
+            <p>Images Copyrights: pixabay.com, unsplash.com</p>
         </div>
     </footer>
 </body>
